prevent buying too much stonk

--- a/app/assets/stylesheets/news.scss
+++ b/app/assets/stylesheets/news.scss
@@ -19,6 +19,7 @@ a {
 .news-left {
   display: flex;
   flex-direction: column;
+  font-weight: 400;
 }
 
 .news-article-headline-and-time {
