--- a/app/assets/stylesheets/stonk_page.scss
+++ b/app/assets/stylesheets/stonk_page.scss
@@ -186,11 +186,13 @@ input[type=number] {
   
   width: 276px; // probably dynamic
   padding: 24px;
-  height: 100vh;
+  // height: 100%;
   border-radius: 4px;
+  height: 334px;
 }
 
 .stonk-div-right-inner {
+  height: 388px;
   border: 1px solid rgb(212, 212, 212);
   padding: 24px; //pick one, hay tres
   position: fixed;
@@ -200,6 +202,6 @@ input[type=number] {
   box-sizing: border-box;
   box-shadow: 0px 12px 24px rgba(0,0,0,0.06), 0px -12px 24px rgba(0,0,0,0.06);
   box-shadow: 24px rgba(0, 0, 0, 0);
-  height: 85%;
+  // height: 85%;
   width: 276px;
 }
